--- a/sass/_colors.scss
+++ b/sass/_colors.scss
@@ -6,7 +6,7 @@ $OLIVE: #3D9970;
 $GREEN: #2ECC40;
 $LIME: #01FF70;
 $YELLOW: #FFDC00;
-$ORANGE: #FF851B;
+$ORANGE: #cc5500;
 $RED: #FF4136;
 $MAROON: #85144b;
 $FUCHSIA: #F012BE;
