--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,14 @@
 @import 'colors';
 
 body{
-	background-color: $FUCHSIA;
+	background-color: $SILVER;
 }
 
 .hide {
   display: none;
 }
 
+/*the below code does not belong to me*/
 .skills-wheel {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
@@ -110,10 +111,11 @@ body{
   display: none;
 }
 .wheel a {
-  color: #ffffff;
+  color: #000;
   left: 0;
   position: absolute;
   text-decoration: none;
+  font-size: 16px;
   top: 48px;
   width: 100%;
 }
