--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,10 @@
 body {
-  background-color: #F012BE; }
+  background-color: #DDDDDD; }
 
 .hide {
   display: none; }
 
+/*the below code does not belong to me*/
 .skills-wheel {
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
@@ -106,10 +107,11 @@ body {
   display: none; }
 
 .wheel a {
-  color: #ffffff;
+  color: #000;
   left: 0;
   position: absolute;
   text-decoration: none;
+  font-size: 16px;
   top: 48px;
   width: 100%; }
 
